envoy-features/backend_client/envoy_backend_client.yaml
stats_sinks:
  -
    name: "envoy.statsd"
    config:
      tcp_cluster_name: "statsd-exporter"
      prefix: backend-client
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "127.0.0.1"
      port_value: 9901
static_resources:
  listeners:
    - 
      name: "backend-client-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8790
      filter_chains:
        - 
          filters:
            - 
              name: "envoy.http_connection_manager"
              config:
                tracing:
                  operation_name: ingress
                access_log:
                - name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                    format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
                stat_prefix: "ingress_8793"
                codec_type: "AUTO"
                route_config:
                  name: "backend-client-http-route"
                  virtual_hosts:
                    - 
                      name: "backend-client-http-route"
                      domains:
                        - "*"
                      routes:
                        - 
                          match:
                            prefix: "/"
                          route:
                            cluster: "backend-client"
                            retry_policy:
                              retry_on: "5xx"
                              num_retries: 300
                              per_try_timeout_ms: 5000
                http_filters:
                  - 
                    name: "envoy.router"
  clusters :
      - 
        name: "backend-client"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        # circuit_breakers:
        #   thresholds:
        #     max_connections: 1
        #     max_pending_requests: 1
        #     max_requests: 1
        hosts:
          - socket_address:
              address: "backend-client"
              port_value: 8083
      - 
        name: zipkin
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
          - 
            socket_address:
              address: zipkin
              port_value: 9411
      -
        name: "statsd-exporter"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: "statsd_exporter"
              port_value: 9125
